# neutrino_trng

./: CMakeLists.txt  README.md
include/neutrino_trng/: neutrino_trng.h
src/: neutrino_trng.cpp
